--- a/index.html
+++ b/index.html
@@ -51,18 +51,17 @@
       <!-- Authors -->
       <div class="is-size-5 publication-authors mt-3">
         <span class="author-block">
-          <a href="https://saadsaoudlyes3.wixsite.com/robotvision" class="has-text-link" target="_blank">Lyes Saad Saoud</a><sup>†</sup>,
+          <a href="https://saadsaoudlyes3.wixsite.com/robotvision" class="has-text-link" target="_blank">Lyes Saad Saoud</a>,
         </span>
         <span class="author-block">
-          <a href="https://www.linkedin.com/in/irf-hussain/" class="has-text-link" target="_blank">Irfan Hussain</a><sup>†</sup>
+          <a href="https://www.linkedin.com/in/irf-hussain/" class="has-text-link" target="_blank">Irfan Hussain</a>
         </span>
       </div>
 
       <!-- Affiliation -->
       <div class="is-size-6 mt-1">
         <span class="icon"><i class="fas fa-play"></i></span> Khalifa University, ARIC Center  
-        <br><sup>†</sup>Project Lead  
-      </div>
+       
 
       <!-- Buttons -->
       <div class="buttons is-centered mt-4">
