--- a/index.html
+++ b/index.html
@@ -121,16 +121,18 @@
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
-         <img class="carousel-img" src="static/images/KINETIQA.png" alt="KINETIQA Architecture"/>
+         <img src="static/images/KINETIQA.png" alt="KINETIQA Architecture" style="width: 60%; height: auto; display: block; margin: auto;" />
 
           <h2 class="subtitle has-text-centered">KINETIQA Model Architecture Overview</h2>
         </div>
         <div class="item">
-          <img class="carousel-img" src="static/images/FeatureSelectionPlot.png" alt="Feature Selection Performance"/>
+          <img src="static/images/FeatureSelectionPlot.png" alt="Feature Selection Performance" style="width: 60%; height: auto; display: block; margin: auto;" />
+
+
           <h2 class="subtitle has-text-centered">Feature Selection via Random Forest + RFECV</h2>
         </div>
         <div class="item">
-          <img class="carousel-img"  src="static/images/ImprovementKINETIQA.png" alt="MAE Improvements"/>
+          <img src="static/images/ImprovementKINETIQA.png" alt="MAE Improvements" style="width: 60%; height: auto; display: block; margin: auto;" />
           <h2 class="subtitle has-text-centered">Relative Improvement in MAE Over Baselines</h2>
         </div>
       </div>
